--- a/architecture/build.gradle
+++ b/architecture/build.gradle
@@ -20,6 +20,8 @@ android {
     }
 
 }
+apply plugin: 'com.github.dcendents.android-maven'
+group='CopyBug'
 
 dependencies {
     def dependencies = rootProject.ext.deps
