--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url "http://maven.aliyun.com/nexus/content/repositories/releases"
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath ('com.tencent.tinker:tinker-patch-gradle-plugin:1.9.1')
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,9 +18,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven {
-            url "http://maven.aliyun.com/nexus/content/repositories/releases"
-        }
+        maven { url "https://jitpack.io" }
     }
 }
 
